Avoid failures in integration tests (#564)
- bump up PermGen settings for Java7
- increase Maven archetype-installation timeout